<resources>
    <string name="app_name">MediaProjection</string>
    <string name="user_label">User</string>
    <string name="username_label">用户名</string>
    <string name="show_password_label">显示密码</string>
    <string name="show_password_default" translatable="false">false</string>
    <string name="password_label">密码</string>
    <string name="username_validation_error">用户名至少需要包括一个或更多字符，不允许为空。</string>
    <string name="password_validation_error">密码至少需要包括一个或更多字符，不允许为空。</string>
    <string name="select">选择</string>
    <string name="register">新建账号</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="swiftp_name">FTP Server</string>
    <string name="nsd_servername_postfix">FTP Server</string>
    <string name="notif_server_starting">Starting at %s</string>
    <string name="notif_title">FTP Server is running</string>
    <string name="notif_text">at %s</string>
    <string name="notif_stop_text">Stop server</string>
    <string name="notif_settings_text">Settings</string>
    <string name="storage_warning">Warning: storage is not available. You may want to unmount it.</string>
    <string name="chroot_label">设置根目录</string>
    <string name="cancel">取消</string>
    <string name="ftp_port">Ftp服务器端口号</string>
    <string name="start_ftp">开启Ftp服务器</string>
    <string name="RTSP_PORT">RTSP端口号设置</string>
    <string name="RTSP">开启RTSP服务器</string>
    <string name="HTTP_PORT">HTTP端口号设置</string>
    <string name="HTTP">开启HTTP服务器</string>

</resources>
