<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="Add Account"
        android:title="Add Account"
        android:summary="" >
        <PreferenceCategory
            android:key="settings"
            android:title="@string/user_label" >
            <EditTextPreference
                android:key="username"
                android:title="@string/username_label" />
            <EditTextPreference
                android:key="password"
                android:title="@string/password_label"
                android:inputType="textPassword" />
            <CheckBoxPreference
                android:id="@+id/showpassword"
                android:key="show_password"
                android:title="@string/show_password_label"
                android:defaultValue="@string/show_password_default" />
            <Preference
                android:key="chrootDir"
                android:title="@string/chroot_label" />
            <Preference
                android:key="register"
                android:title="@string/register"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <EditTextPreference
        android:key="ftpport"
        android:title="@string/ftp_port"
        />
    <CheckBoxPreference
        android:key="start_ftp"
        android:title="@string/start_ftp"
        android:id="@+id/startftp"
        android:defaultValue="true"/>
    <EditTextPreference
        android:key="RTSP_port"
        android:title="@string/RTSP_PORT"/>
    <CheckBoxPreference
        android:key="RTSP"
        android:title="@string/RTSP"
        android:id="@+id/rtsp"
        android:defaultValue="false"/>
    <EditTextPreference
        android:key="HTTP_port"
        android:title="@string/HTTP_PORT"/>
    <CheckBoxPreference
        android:key="HTTP"
        android:title="@string/HTTP"
        android:id="@+id/http"
        android:defaultValue="true"/>
</PreferenceScreen>